--- a/Conway/Conway.csproj
+++ b/Conway/Conway.csproj
@@ -8,10 +8,22 @@
 
   <ItemGroup>
     <None Remove="Tests\test1.txt" />
+    <None Remove="Tests\test2.txt" />
+    <None Remove="Tests\test3.txt" />
+    <None Remove="Tests\test4.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Tests\test1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Tests\test2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Tests\test3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Tests\test4.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
